--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -55,7 +55,7 @@
                 android:drawableTint="@color/text_highlight"
                 android:hint="Email Address"
                 android:padding="15dp"
-                android:textColor="@color/text_highlight" />
+                android:textColor="@color/black" />
 
             <EditText
                 android:layout_width="match_parent"
@@ -68,7 +68,7 @@
                 android:hint="Password"
                 android:inputType="textPassword"
                 android:padding="15dp"
-                android:textColor="@color/text_highlight" />
+                android:textColor="@color/black" />
 
             <TextView
                 android:layout_width="wrap_content"
