--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="primary">#FAE488</color>
     <color name="primary_dark">#F5C480</color>
     <color name="secondary">#741F6C</color>
+    <color name="tertiary">#EE826F</color>
+
     <color name="text">#605252</color>
     <color name="text_danger">#B00909</color>
     <color name="text_highlight">#A69393</color>
