--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,13 +8,26 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
 
-    <color name="primary">#FAE488</color>
+<!--    v1-->
     <color name="primary_dark">#F5C480</color>
-    <color name="secondary">#741F6C</color>
     <color name="tertiary">#EE826F</color>
-
     <color name="text">#605252</color>
     <color name="text_danger">#B00909</color>
     <color name="text_highlight">#A69393</color>
+
+<!--    v2-->
+    <color name="primary">#261C38</color>
+    <color name="secondary">#9A1764</color>
+    <color name="danger">#F63029</color>
+    <color name="info">#98A2B3</color>
+    <color name="warning">#FCC44E</color>
+    <color name="text_primary">#101828</color>
+    <color name="text_secondary">#475467</color>
+    <color name="background">#FFFFFF</color>
+    <color name="edit_text">#EFF7FF</color>
+
+
+
+
 
 </resources>
