--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -1,2 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources></resources>
+<resources>
+
+    <!-- Custom theme with default height and width values -->
+    <style name="all_wrap" parent="Theme.Esawar">
+        <!-- Set default height and width -->
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+    <!-- Custom theme with default height and width values -->
+    <style name="all_match" parent="Theme.Esawar">
+        <!-- Set default height and width -->
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
+    </style>
+
+    <!-- Custom theme with default height and width values -->
+    <style name="width_match" parent="Theme.Esawar">
+        <!-- Set default height and width -->
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+    </style>
+
+
+</resources>
