--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -13,6 +13,17 @@
         <item name="android:statusBarColor">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
         <item name="android:windowBackground">@android:color/white</item>
+        <!-- Set default text color -->
+        <item name="android:textColor">@color/text_primary</item>
+        <!-- Set default font family -->
+        <item name="android:fontFamily">@font/montserratmedium</item>
+        <!-- Set default text size -->
+        <item name="android:textSize">20sp</item>
+        <!-- Set default orientation -->
+        <item name="android:orientation">vertical</item>
+
+
+
 
     </style>
 </resources>
