--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -22,5 +22,18 @@
         <item name="android:layout_height">wrap_content</item>
     </style>
 
+    <style name="edit_text" parent="Theme.Esawar">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:background">@drawable/edit_text</item>
+        <item name="android:hint">Type Here</item>
+        <item name="android:drawablePadding">10dp</item>
+        <item name="android:textSize">15sp</item>
+        <item name="android:paddingLeft">15dp</item>
+        <item name="android:paddingTop">15dp</item>
+        <item name="android:paddingRight">15dp</item>
+        <item name="android:paddingBottom">15dp</item>
+    </style>
+
 
 </resources>
