--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -21,8 +21,10 @@
         <item name="android:textSize">20sp</item>
         <!-- Set default orientation -->
         <item name="android:orientation">vertical</item>
-
-
+        <!-- Set default hint color -->
+        <item name="android:textColorHint">@color/text_secondary</item>
+        <!-- Set default hint color -->
+        <item name="android:drawableTint" tools:targetApi="m">@color/text_secondary</item>
 
 
     </style>
