--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,157 +1,216 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
+    android:scrollbars="none"
+    android:background="@drawable/bg_official"
     tools:context=".authentication.Login">
 
-<!--    Header-->
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:src="@drawable/esawar"
-        android:layout_marginTop="60dp"
-        />
-
+    <LinearLayout
+        style="@style/all_match"
+        >
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Ilocos Sur Traveler’s App"
-        android:textColor="@color/black"
-        android:textAlignment="center"
-        android:textSize="20sp"
+        style="@style/all_wrap"
+        android:text="Sign in"
         android:fontFamily="@font/montserratbold"
-        android:layout_marginTop="10dp"
-        />
+        android:textColor="@color/background"
+        android:textSize="30sp"
+        android:layout_marginTop="50dp"
+        android:layout_marginStart="10dp"
+        android:padding="20dp"
+    />
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        style="@style/all_match"
         android:layout_marginTop="30dp"
-        android:layout_marginHorizontal="15dp"
-        app:cardBackgroundColor="@color/primary"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="6dp"
-        android:outlineAmbientShadowColor="@color/secondary"
-        android:outlineSpotShadowColor="@color/secondary"
+        android:background="@drawable/top_radius"
         >
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
+            style="@style/all_match"
+            android:orientation="vertical"
+            android:layout_margin="30dp"
+            >
 
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="30dp"
-                android:background="@color/white"
-                android:drawableLeft="@drawable/baseline_person_24"
-                android:drawableTint="@color/text_highlight"
-                android:hint="Email Address"
-                android:padding="15dp"
-                android:textColor="@color/black" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/white"
-                android:drawableLeft="@drawable/baseline_lock_24"
-                android:drawableTint="@color/text_highlight"
-                android:hint="Password"
-                android:inputType="textPassword"
-                android:padding="15dp"
-                android:textColor="@color/black" />
 
             <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginVertical="10dp"
-                android:layout_marginStart="20dp"
-                android:fontFamily="@font/montserratmedium"
-                android:text="Forgot Password"
-                android:textColor="@color/text_danger" />
+                style="@style/all_wrap"
+                android:textSize="20sp"
+                android:fontFamily="@font/montserratbold"
+                android:text="Welcome Back"
+                />
 
-            <com.google.android.material.button.MaterialButton
-                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="10dp"
-                android:layout_marginEnd="10dp"
+            <TextView
+                style="@style/all_wrap"
+                android:textSize="15sp"
+                android:text="Sign in to continue"
                 android:layout_marginBottom="10dp"
-                android:drawableTint="@color/primary"
-                android:fontFamily="@font/montserratmedium"
-                android:paddingHorizontal="80dp"
-                android:paddingVertical="15dp"
-                android:stateListAnimator="@null"
-                android:text="Login"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                app:backgroundTint="@color/primary_dark"
-                app:cornerRadius="10dp"
-                app:rippleColor="@color/primary_dark"
-                app:strokeColor="@color/primary_dark"
-                app:strokeWidth="1dp"></com.google.android.material.button.MaterialButton>
+                android:textColor="@color/text_secondary"
+                />
 
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="3dp"
-                android:layout_marginHorizontal="50dp"
-                android:background="@color/secondary" />
-
-
+<!--            Email Section-->
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginVertical="20dp"
-                android:orientation="horizontal">
+                android:layout_marginTop="10dp"
+                style="@style/width_match"
+                >
 
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginHorizontal="10dp"
-                    android:src="@drawable/google"
-
+                <TextView
+                    android:layout_marginTop="10dp"
+                    style="@style/all_wrap"
+                    android:textSize="15sp"
+                    android:text="Email"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="@color/text_secondary"
                     />
 
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginHorizontal="10dp"
-                    android:src="@drawable/facebook" />
-
-
-
+                <EditText
+                    style="@style/edit_text"
+                    android:hint="Enter Your Email"
+                    android:drawableStart="@drawable/baseline_email_24"
+                    />
 
             </LinearLayout>
 
+<!--Password Section-->
+            <LinearLayout
+                android:layout_marginTop="10dp"
+                style="@style/width_match"
+                >
+
+                <TextView
+                    android:layout_marginTop="10dp"
+                    style="@style/all_wrap"
+                    android:textSize="15sp"
+                    android:text="Password"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="@color/text_secondary"
+                    />
+
+                <EditText
+                    style="@style/edit_text"
+                    android:hint="Enter Your Password"
+                    android:drawableStart="@drawable/baseline_lock_24"
+                    android:inputType="textPassword"
+                    />
+
+            </LinearLayout>
+
+<!--        Forgot Password-->
             <TextView
-                android:layout_width="wrap_content"
+                android:layout_marginTop="20dp"
+                style="@style/all_wrap"
+                android:textSize="15sp"
+                android:text="Forgot Password?"
+                android:layout_marginBottom="10dp"
+                android:textColor="@color/text_secondary"
+                android:fontFamily="@font/montserratbold"
+                />
+
+
+<!--            Sign in -->
+            <com.google.android.material.button.MaterialButton
+                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
+                android:padding="14dp"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="40dp"
-                android:layout_gravity="center_horizontal"
-                android:fontFamily="@font/montserratmedium"
-                android:text="Create Account"
+                android:fontFamily="@font/montserratsemibold"
+                android:stateListAnimator="@null"
+                android:text="SIGN IN"
+                android:textColor="@color/background"
                 android:textSize="20sp"
-                android:textColor="@color/text_danger" />
+                android:layout_marginTop="10dp"
+                app:backgroundTint="@color/primary"
+                app:cornerRadius="12dp"
+                app:rippleColor="@color/background"
+                app:strokeColor="@color/background"
+                app:strokeWidth="1dp" />
+
+
+<!--        Underline-->
+        <View
+            android:layout_marginVertical="20dp"
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/primary"
+            />
+
+<!--            Or sign in with-->
+            <TextView
+                style="@style/width_match"
+                android:textSize="15sp"
+                android:text="Or Sign in with"
+                android:layout_marginBottom="10dp"
+                android:textColor="@color/text_secondary"
+                android:fontFamily="@font/montserratbold"
+                android:textAlignment="center"
+                android:textAllCaps="true"
+                />
+
+
+<!--            Google-->
+            <LinearLayout
+                android:layout_marginVertical="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:background="@drawable/button_imitate"
+                android:padding="14dp">
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/google"
+                    android:contentDescription="Google Logo" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Google"
+                    android:textColor="@color/text_primary"
+                    android:textSize="20sp"
+                    android:textAllCaps="false"
+                    android:fontFamily="@font/montserratsemibold"
+                    android:layout_marginStart="8dp" />
+
+            </LinearLayout>
+            <!--Facebook-->
+            <LinearLayout
+                android:layout_marginVertical="10dp"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="horizontal"
+                android:background="@drawable/button_imitate"
+                android:padding="14dp">
+
+                <ImageView
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:src="@drawable/facebook"
+                    android:contentDescription="Google Logo" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Facebook"
+                    android:fontFamily="@font/montserratsemibold"
+                    android:textColor="@color/text_primary"
+                    android:textSize="20sp"
+                    android:textAllCaps="false"
+                    android:layout_marginStart="8dp" />
+
+            </LinearLayout>
 
 
         </LinearLayout>
 
 
-    </androidx.cardview.widget.CardView>
+    </LinearLayout>
+
+    </LinearLayout>
 
 
-
-</LinearLayout>
+</ScrollView>
