--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -4,179 +4,277 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white"
+    android:scrollbars="none"
+    android:background="@drawable/bg_official"
     tools:context=".authentication.SignUp">
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
+        style="@style/all_match"
         >
-
-    <!--    Header-->
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="100dp"
-        android:src="@drawable/esawar"
-        android:layout_marginTop="20dp"
-        />
-
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Ilocos Sur Traveler’s App"
-        android:textColor="@color/black"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        android:fontFamily="@font/montserratbold"
-        android:layout_marginTop="10dp"
-        />
-
-    <androidx.cardview.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginVertical="30dp"
-        android:layout_marginHorizontal="15dp"
-        app:cardBackgroundColor="@color/primary"
-        app:cardCornerRadius="10dp"
-        app:cardElevation="6dp"
-        android:outlineAmbientShadowColor="@color/secondary"
-        android:outlineSpotShadowColor="@color/secondary"
-        >
+        <TextView
+            style="@style/all_wrap"
+            android:text="Create an Account"
+            android:fontFamily="@font/montserratbold"
+            android:textColor="@color/background"
+            android:textSize="30sp"
+            android:layout_marginTop="50dp"
+            android:layout_marginStart="10dp"
+            android:padding="20dp"
+            />
 
         <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="30dp"
-                android:background="@color/white"
-                android:hint="Username"
-                android:padding="15dp"
-                android:textColor="@color/black" />
-
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/white"
-                android:hint="Email Address"
-                android:padding="15dp"
-                android:textColor="@color/black" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/white"
-                android:hint="Contact No. (+63)"
-                android:padding="15dp"
-                android:textColor="@color/black" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/white"
-                android:hint="Create Password"
-                android:inputType="textPassword"
-                android:padding="15dp"
-                android:textColor="@color/black" />
-
-            <EditText
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginHorizontal="20dp"
-                android:layout_marginTop="20dp"
-                android:background="@color/white"
-                android:hint="Confirm Password"
-                android:inputType="textPassword"
-                android:padding="15dp"
-                android:textColor="@color/black" />
-
-
-            <com.google.android.material.button.MaterialButton
-                style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentBottom="true"
-                android:layout_centerHorizontal="true"
-                android:layout_gravity="center"
-                android:layout_marginStart="10dp"
-                android:layout_marginTop="30dp"
-                android:layout_marginEnd="10dp"
-                android:layout_marginBottom="10dp"
-                android:drawableTint="@color/primary"
-                android:fontFamily="@font/montserratmedium"
-                android:paddingHorizontal="80dp"
-                android:paddingVertical="15dp"
-                android:stateListAnimator="@null"
-                android:text="REGISTER"
-                android:textColor="@color/black"
-                android:textSize="18sp"
-                app:backgroundTint="@color/primary_dark"
-                app:cornerRadius="10dp"
-                app:rippleColor="@color/primary_dark"
-                app:strokeColor="@color/primary_dark"
-                app:strokeWidth="1dp"></com.google.android.material.button.MaterialButton>
-
-            <View
-                android:layout_width="match_parent"
-                android:layout_height="3dp"
-                android:layout_marginHorizontal="50dp"
-                android:background="@color/secondary" />
-
+            style="@style/all_match"
+            android:layout_marginTop="30dp"
+            android:background="@drawable/top_radius"
+            >
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginVertical="20dp"
-                android:orientation="horizontal">
+                style="@style/all_match"
+                android:orientation="vertical"
+                android:layout_margin="30dp"
+                >
 
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginHorizontal="10dp"
-                    android:src="@drawable/google"
 
+                <TextView
+                    style="@style/all_wrap"
+                    android:textSize="20sp"
+                    android:fontFamily="@font/montserratbold"
+                    android:text="Welcome Tourist!"
                     />
 
-                <ImageView
-                    android:layout_width="50dp"
-                    android:layout_height="50dp"
-                    android:layout_marginHorizontal="10dp"
-                    android:src="@drawable/facebook" />
+                <TextView
+                    style="@style/all_wrap"
+                    android:textSize="15sp"
+                    android:text="Register to continue"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="@color/text_secondary"
+                    />
 
 
+                <!--            UserName Section-->
+                <LinearLayout
+                    android:layout_marginTop="10dp"
+                    style="@style/width_match"
+                    >
+
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        style="@style/all_wrap"
+                        android:textSize="15sp"
+                        android:text="Username"
+                        android:layout_marginBottom="10dp"
+                        android:textColor="@color/text_secondary"
+                        />
+
+                    <EditText
+                        android:id="@+id/edtTextUserName"
+                        style="@style/edit_text"
+                        android:hint="Enter Your Username"
+                        />
+
+                </LinearLayout>
+
+
+                <!--            Email Section-->
+                <LinearLayout
+                    android:layout_marginTop="10dp"
+                    style="@style/width_match"
+                    >
+
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        style="@style/all_wrap"
+                        android:textSize="15sp"
+                        android:text="Email"
+                        android:layout_marginBottom="10dp"
+                        android:textColor="@color/text_secondary"
+                        />
+
+                    <EditText
+                        android:id="@+id/edtEmail"
+                        style="@style/edit_text"
+                        android:hint="Enter Your Email"
+                        />
+
+                </LinearLayout>
+
+                <!--            Contact No. Section-->
+                <LinearLayout
+                    android:layout_marginTop="10dp"
+                    style="@style/width_match"
+                    >
+
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        style="@style/all_wrap"
+                        android:textSize="15sp"
+                        android:text="Contact No."
+                        android:layout_marginBottom="10dp"
+                        android:textColor="@color/text_secondary"
+                        />
+
+                    <EditText
+                        android:id="@+id/edtContactNo"
+                        style="@style/edit_text"
+                        android:hint="Enter Your Contact No."
+                        />
+
+                </LinearLayout>
+
+                <!--Password Section-->
+                <LinearLayout
+                    android:layout_marginTop="10dp"
+                    style="@style/width_match"
+                    >
+
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        style="@style/all_wrap"
+                        android:textSize="15sp"
+                        android:text="Password"
+                        android:layout_marginBottom="10dp"
+                        android:textColor="@color/text_secondary"
+                        />
+
+                    <EditText
+                        android:id="@+id/editPassword"
+                        style="@style/edit_text"
+                        android:hint="Create Password"
+                        android:inputType="textPassword"
+                        />
+
+                </LinearLayout>
+
+                <!-- Create Password Section-->
+                <LinearLayout
+                    android:layout_marginTop="10dp"
+                    style="@style/width_match"
+                    >
+
+                    <TextView
+                        android:layout_marginTop="10dp"
+                        style="@style/all_wrap"
+                        android:textSize="15sp"
+                        android:text="Confirm Password"
+                        android:layout_marginBottom="10dp"
+                        android:textColor="@color/text_secondary"
+                        />
+
+                    <EditText
+                        android:id="@+id/editMatchPassword"
+                        style="@style/edit_text"
+                        android:hint="Enter Match Password"
+                        android:inputType="textPassword"
+                        />
+
+                </LinearLayout>
+
+
+                <!--            Sign in -->
+                <com.google.android.material.button.MaterialButton
+                    android:id="@+id/btnRegister"
+                    style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
+                    android:padding="14dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:fontFamily="@font/montserratsemibold"
+                    android:stateListAnimator="@null"
+                    android:text="Register"
+                    android:textColor="@color/background"
+                    android:textSize="20sp"
+                    android:layout_marginTop="10dp"
+                    app:backgroundTint="@color/primary"
+                    app:cornerRadius="12dp"
+                    app:rippleColor="@color/background"
+                    app:strokeColor="@color/background"
+                    app:strokeWidth="1dp" />
+
+
+                <!--        Underline-->
+                <View
+                    android:layout_marginVertical="20dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/primary"
+                    />
+
+                <!--            Or sign in with-->
+                <TextView
+                    style="@style/width_match"
+                    android:textSize="15sp"
+                    android:text="Or Register with"
+                    android:layout_marginBottom="10dp"
+                    android:textColor="@color/text_secondary"
+                    android:fontFamily="@font/montserratbold"
+                    android:textAlignment="center"
+                    android:textAllCaps="true"
+                    />
+
+
+                <!--            Google-->
+                <LinearLayout
+                    android:id="@+id/btnGoogle"
+                    android:layout_marginVertical="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:background="@drawable/button_imitate"
+                    android:padding="14dp">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/google"
+                        android:contentDescription="Google Logo" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Google"
+                        android:textColor="@color/text_primary"
+                        android:textSize="20sp"
+                        android:textAllCaps="false"
+                        android:fontFamily="@font/montserratsemibold"
+                        android:layout_marginStart="8dp" />
+
+                </LinearLayout>
+                <!--Facebook-->
+                <LinearLayout
+                    android:id="@+id/btnFacebook"
+                    android:layout_marginVertical="10dp"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:orientation="horizontal"
+                    android:background="@drawable/button_imitate"
+                    android:padding="14dp">
+
+                    <ImageView
+                        android:layout_width="24dp"
+                        android:layout_height="24dp"
+                        android:src="@drawable/facebook"
+                        android:contentDescription="Google Logo" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Facebook"
+                        android:fontFamily="@font/montserratsemibold"
+                        android:textColor="@color/text_primary"
+                        android:textSize="20sp"
+                        android:textAllCaps="false"
+                        android:layout_marginStart="8dp" />
+
+                </LinearLayout>
 
 
             </LinearLayout>
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginBottom="40dp"
-                android:layout_gravity="center_horizontal"
-                android:fontFamily="@font/montserratmedium"
-                android:text="Already have account?"
-                android:textSize="20sp"
-                android:textColor="@color/text_danger" />
-
 
         </LinearLayout>
 
-
-    </androidx.cardview.widget.CardView>
-
-
     </LinearLayout>
+
+
 </ScrollView>
