--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,39 +11,78 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@color/white"
+        android:paddingVertical="5dp"
+        android:background="@color/primary"
         >
 
+        <!--    Logo-->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:paddingVertical="10dp"
+            >
+            <ImageView
+                android:layout_width="40dp"
+                android:layout_height="match_parent"
+                android:src="@drawable/esawar_logo"
+                />
 
-    <ImageView
-        android:layout_width="130dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginStart="-20dp"
-
-        android:src="@drawable/esawar"
-        />
-
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="10dp"
-        android:layout_marginEnd="10dp"
-        android:layout_marginBottom="10dp">
-
-
-        <ImageView
-            android:id="@+id/menu"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:src="@drawable/baseline_menu_24"
-            app:tint="@color/tertiary" />
+            <TextView
+                style="@style/all_wrap"
+                android:text="@string/app_name"
+                android:textAllCaps="true"
+                android:textSize="14sp"
+                android:fontFamily="@font/montserratblack"
+                android:textColor="@color/background"
+                />
 
 
-    </RelativeLayout>
+        </LinearLayout>
+
+
+        <!--Profile-->
+
+        <RelativeLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:layout_marginEnd="7dp"
+            android:layout_marginBottom="10dp">
+
+            <LinearLayout
+                style="@style/all_wrap"
+                android:layout_alignParentRight="true"
+                android:layout_centerVertical="true"
+                android:paddingVertical="7dp"
+                android:paddingHorizontal="10dp"
+                android:background="@drawable/container"
+                android:orientation="horizontal"
+                >
+                <ImageView
+                    android:id="@+id/menu"
+                    android:layout_width="22dp"
+                    android:layout_height="22dp"
+                    android:src="@drawable/profile"
+                    app:tint="@color/white" />
+
+
+                <TextView
+                    style="@style/all_wrap"
+                    android:text="Thirdy"
+                    android:textColor="@color/white"
+                    android:textSize="14sp"
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="center_vertical"
+                    />
+
+            </LinearLayout>
+
+
+
+        </RelativeLayout>
 
     </LinearLayout>
 
