--- a/app/src/main/res/layout/activity_home.xml
+++ b/app/src/main/res/layout/activity_home.xml
@@ -33,28 +33,31 @@
                 style="@style/width_match"
                 android:layout_alignParentRight="true"
                 android:layout_centerVertical="true"
-                android:paddingVertical="15dp"
-                android:paddingHorizontal="10dp"
+
                 android:layout_marginVertical="10dp"
                 android:background="@drawable/container"
                 android:orientation="horizontal"
                 >
                 <ImageView
                     android:id="@+id/menu"
-                    android:layout_width="22dp"
-                    android:layout_height="22dp"
+                    android:layout_width="26dp"
+                    android:layout_height="26dp"
                     android:src="@drawable/search"
+                    android:layout_marginStart="10dp"
+                    android:layout_gravity="center"
                     app:tint="@color/info" />
 
 
                 <EditText
                     style="@style/width_match"
+                    android:layout_height="wrap_content"
                     android:textColor="@color/white"
                     android:textSize="18sp"
+                    android:paddingVertical="15dp"
+                    android:paddingHorizontal="10dp"
                     android:hint="Search Places here"
                     android:textColorHint="@color/info"
                     android:background="@android:color/transparent"
-                    android:layout_marginStart="10dp"
                     android:layout_gravity="center_vertical"
                     />
 
@@ -83,10 +86,387 @@
             android:layout_height="wrap_content"
             />
 
+<!--        Underline-->
+
+        <View
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:background="@color/primary"
+            android:layout_marginVertical="10dp"
+            android:layout_marginHorizontal="10dp"
+            />
+
+<!--            Ilocus Sur Municipal-->
+        <TextView
+                style="@style/all_wrap"
+                android:text="Ilocus Sur Municipal"
+                android:textSize="14sp"
+                android:padding="10dp"
+                android:layout_marginStart="8dp"
+                />
 
 
 
-<!--        Visible gone muna for changhes-->
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginHorizontal="5dp"
+            >
+
+<!--            Alilem-->
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                app:cardElevation="8dp"
+                app:cardBackgroundColor="@color/background"
+                app:cardCornerRadius="12dp"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginVertical="5dp"
+                android:outlineSpotShadowColor="@color/shadow"
+                android:outlineAmbientShadowColor="@color/shadow"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal"
+                    >
+
+                    <TextView
+                        style="@style/all_wrap"
+                        android:text="Alilem"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="13sp"
+                        android:layout_marginStart="10dp"
+                        android:fontFamily="@font/montserratsemibold"
+                        />
+
+                    <!--                Logo Container-->
+                    <LinearLayout
+                        style="@style/width_match"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="end"
+                        >
+
+                        <ImageView
+                            android:layout_width="70dp"
+                            android:layout_height="70dp"
+                            android:src="@drawable/municipal_alilem"
+                            android:scaleType="centerCrop"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginRight="-20dp"
+                            />
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+
+            </androidx.cardview.widget.CardView>
+
+            <!--Banayoyo-->
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                app:cardElevation="8dp"
+                app:cardCornerRadius="12dp"
+                app:cardBackgroundColor="@color/background"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginVertical="5dp"
+                android:outlineSpotShadowColor="@color/shadow"
+                android:outlineAmbientShadowColor="@color/shadow"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal"
+                    >
+
+                    <TextView
+                        style="@style/all_wrap"
+                        android:text="Banayoyo"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="13sp"
+                        android:layout_marginStart="10dp"
+                        android:fontFamily="@font/montserratsemibold"
+                        />
+
+                    <!--                Logo Container-->
+                    <LinearLayout
+                        style="@style/width_match"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="end"
+                        >
+
+                        <ImageView
+                            android:layout_width="70dp"
+                            android:layout_height="70dp"
+                            android:src="@drawable/municipal_banayoyo"
+                            android:scaleType="centerCrop"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginRight="-20dp"
+                            />
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginHorizontal="5dp"
+            >
+
+            <!--            Alilem-->
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                app:cardElevation="8dp"
+                app:cardBackgroundColor="@color/background"
+                app:cardCornerRadius="12dp"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginVertical="5dp"
+                android:outlineSpotShadowColor="@color/shadow"
+                android:outlineAmbientShadowColor="@color/shadow"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal"
+                    >
+
+                    <TextView
+                        style="@style/all_wrap"
+                        android:text="Bantay"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="13sp"
+                        android:layout_marginStart="10dp"
+                        android:fontFamily="@font/montserratsemibold"
+                        />
+
+                    <!--                Logo Container-->
+                    <LinearLayout
+                        style="@style/width_match"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="end"
+                        >
+
+                        <ImageView
+                            android:layout_width="70dp"
+                            android:layout_height="70dp"
+                            android:src="@drawable/municipal_bantay"
+                            android:scaleType="centerCrop"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginRight="-20dp"
+                            />
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+
+            </androidx.cardview.widget.CardView>
+
+            <!--Banayoyo-->
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                app:cardElevation="8dp"
+                app:cardCornerRadius="12dp"
+                app:cardBackgroundColor="@color/background"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginVertical="5dp"
+                android:outlineSpotShadowColor="@color/shadow"
+                android:outlineAmbientShadowColor="@color/shadow"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal"
+                    >
+
+                    <TextView
+                        style="@style/all_wrap"
+                        android:text="Burgos"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="13sp"
+                        android:layout_marginStart="10dp"
+                        android:fontFamily="@font/montserratsemibold"
+                        />
+
+                    <!--                Logo Container-->
+                    <LinearLayout
+                        style="@style/width_match"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="end"
+                        >
+
+                        <ImageView
+                            android:layout_width="70dp"
+                            android:layout_height="70dp"
+                            android:src="@drawable/municipal_burgos"
+                            android:scaleType="centerCrop"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginRight="-20dp"
+                            />
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:layout_marginHorizontal="5dp"
+            >
+
+            <!--            Alilem-->
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                app:cardElevation="8dp"
+                app:cardBackgroundColor="@color/background"
+                app:cardCornerRadius="12dp"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginVertical="5dp"
+                android:outlineSpotShadowColor="@color/shadow"
+                android:outlineAmbientShadowColor="@color/shadow"
+                >
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal"
+                    >
+
+                    <TextView
+                        style="@style/all_wrap"
+                        android:text="Cabugao"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="13sp"
+                        android:layout_marginStart="10dp"
+                        android:fontFamily="@font/montserratsemibold"
+                        />
+
+                    <!--                Logo Container-->
+                    <LinearLayout
+                        style="@style/width_match"
+                        android:layout_gravity="center_horizontal"
+                        android:gravity="end"
+                        >
+
+                        <ImageView
+                            android:layout_width="70dp"
+                            android:layout_height="70dp"
+                            android:src="@drawable/municipal_cabugao"
+                            android:scaleType="centerCrop"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginRight="-20dp"
+                            />
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+
+            </androidx.cardview.widget.CardView>
+
+            <!--Banayoyo-->
+            <androidx.cardview.widget.CardView
+                android:layout_width="match_parent"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                app:cardElevation="8dp"
+                app:cardCornerRadius="12dp"
+                app:cardBackgroundColor="@color/background"
+                android:layout_marginHorizontal="5dp"
+                android:layout_marginVertical="5dp"
+                android:outlineSpotShadowColor="@color/shadow"
+                android:outlineAmbientShadowColor="@color/shadow"
+                >
+
+                <LinearLayout
+                    android:id="@+id/btnSeeAll"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:orientation="horizontal"
+                    >
+
+                    <TextView
+                        style="@style/all_wrap"
+                        android:text="See All"
+                        android:layout_gravity="center_vertical"
+                        android:textSize="13sp"
+                        android:layout_marginStart="10dp"
+                        android:fontFamily="@font/montserratsemibold"
+                        />
+
+                    <!--                Logo Container-->
+                    <LinearLayout
+                        style="@style/width_match"
+                        android:layout_gravity="center_vertical"
+                        android:gravity="end"
+                        >
+
+                        <ImageView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:src="@drawable/baseline_add_24"
+                            android:scaleType="centerCrop"
+                            android:layout_marginTop="5dp"
+                            app:tint="@color/primary"
+                            android:layout_marginRight="10dp"
+                            />
+
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+
+
+            </androidx.cardview.widget.CardView>
+
+        </LinearLayout>
+
+
+
+
+
+
+
+        <!--        Visible gone muna for changhes-->
         <androidx.recyclerview.widget.RecyclerView
             android:visibility="gone"
             android:id="@+id/rec_places"
@@ -94,6 +474,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
             android:layout_marginHorizontal="10dp"
+            android:layout_marginBottom="20dp"
             />
 
 
@@ -102,7 +483,7 @@
 
         <!--                        Reccomended-->
         <LinearLayout
-            android:layout_marginTop="5dp"
+            android:layout_marginTop="25dp"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -122,33 +503,13 @@
                     android:layout_gravity="center"
                     android:contentDescription="location"/>
 
-                <LinearLayout
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical"
-                    >
-
-                    <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Recommneded"
-                        android:textSize="18sp"
-                        android:paddingHorizontal="5dp"
-                        android:textColor="@color/tertiary"
-                        android:fontFamily="@font/montserratmedium"
-                        />
-
-                    <TextView
-                        android:layout_marginTop="-6dp"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Places for you"
-                        android:textSize="12sp"
-                        android:paddingHorizontal="5dp"
-                        android:textColor="@color/black"
-                        android:fontFamily="@font/montserratmedium"
-                        />
-                </LinearLayout>
+                <TextView
+                    style="@style/all_wrap"
+                    android:text="Recommended Places For you"
+                    android:textSize="14sp"
+                    android:paddingVertical="10dp"
+                    android:layout_marginStart="8dp"
+                    />
 
             </LinearLayout>
 
