--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -26,6 +26,7 @@
     <color name="background">#FFFFFF</color>
     <color name="edit_text">#EFF7FF</color>
     <color name="edit_text2">#4E4760</color>
+    <color name="shadow">#CCCCCC</color>
 
 
 </resources>
