--- a/app/src/main/res/layout/activity_restaurant.xml
+++ b/app/src/main/res/layout/activity_restaurant.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -48,7 +48,7 @@
                     android:textSize="18sp"
                     android:paddingVertical="15dp"
                     android:paddingHorizontal="10dp"
-                    android:hint="Search Hotels here"
+                    android:hint="Search Restaurant here"
                     android:textColorHint="@color/info"
                     android:background="@android:color/transparent"
                     android:layout_gravity="center_vertical"
@@ -66,4 +66,4 @@
             android:layout_marginTop="5dp"/>
 
     </LinearLayout>
-</ScrollView>
+</androidx.core.widget.NestedScrollView>
