--- a/app/src/main/res/layout/activity_places_home_page.xml
+++ b/app/src/main/res/layout/activity_places_home_page.xml
@@ -36,7 +36,7 @@
             <TextView
                 android:id="@+id/place"
                 style="@style/all_wrap"
-                android:text="VIGAN"
+                android:text="{Place Name}"
                 android:textColor="@color/background"
                 android:textSize="15sp"
                 android:layout_marginRight="5dp"
@@ -109,7 +109,27 @@
     </androidx.core.widget.NestedScrollView>
 
 
+    <com.google.android.material.button.MaterialButton
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
 
+        style="@style/TextAppearance.AppCompat.Widget.Button.Colored"
+        android:padding="14dp"
+        android:layout_width="wrap_content"
+        android:layout_marginBottom="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/montserratsemibold"
+        android:stateListAnimator="@null"
+        android:text="Chat"
+        android:textColor="@color/background"
+        android:textSize="20sp"
+        android:layout_marginTop="10dp"
+        app:backgroundTint="@color/primary"
+        app:cornerRadius="12dp"
+        app:rippleColor="@color/background"
+        app:strokeColor="@color/background"
+        app:strokeWidth="1dp" />
 
 
 </RelativeLayout>
